cmd_hexdump.* moved to the folder commands/

--- a/source_code/Makefile
+++ b/source_code/Makefile
@@ -28,7 +28,7 @@ SRC_DIR = .
 OBJ_DIR = ./build
 
 # Include directories
-INCLUDE_DIRS := . drivers utils memory
+INCLUDE_DIRS := . drivers utils memory commands
 INCLUDE_FLAGS := $(addprefix -I, $(INCLUDE_DIRS))
 
 
